--- a/fronted/projects/vs-2019/ZipTool.vcxproj
+++ b/fronted/projects/vs-2019/ZipTool.vcxproj
@@ -111,6 +111,9 @@
     <ClCompile Include="ZipTool.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="C:\Users\Daniel\Desktop\ZipTool_icon.ico" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
     <Import Project="$(QtMsBuild)\qt.targets" />
