--- a/fronted/projects/vs-2019/ZipTool.vcxproj.filters
+++ b/fronted/projects/vs-2019/ZipTool.vcxproj.filters
@@ -41,4 +41,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="C:\Users\Daniel\Desktop\ZipTool_icon.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
